add hover to table

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <header>
             <h3>Неправильные глаголы</h3>
         </header>
-        <table class="table table-bordered">
+        <table class="table table-bordered table-hover">
             <thead>
             <tr>
                 <th>
