--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>Неправильные глаголы - Irregular Verbs</title>
+    <title>Irregular Verbs</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css"
           integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
@@ -39,9 +39,6 @@
 <body>
 <div class="container-fluid">
     <div class="row">
-        <header>
-            <h3>Неправильные глаголы</h3>
-        </header>
         <table class="table table-bordered table-hover">
             <thead>
             <tr>
@@ -55,7 +52,7 @@
                     Past Participle
                 </th>
                 <th>
-                    Перевод
+                    Translation
                 </th>
             </tr>
             </thead>
